--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>This is a Cydia repo</p>
-</body>
-</html>
+<html><head>
+<title>NkBh's Repo</title>
+<link rel='stylesheet' type='text/css' href='ios7.css'/>
+<meta name='viewport' content='width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;'/>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<script src="jquery-3.2.1.min.js"></script>
+<script src="description.js?_=46545663394"></script>
+<body onload="loadRecentUpdates();">
+<h2>NkBh's Repo</h2>
+<ul>
+	<li>
+		<a href="cydia://url/https://cydia.saurik.com/api/share#?source=http://nkbhhack.github.io/">
+			<img class="icon" src="cydia7.png"/>
+			Open Cydia</label>
+		</a>
+	</li>
+</ul>
+<p style="text-align:center;">Repo: http://nkbhhack.github.io/</p>
+</ul>
+<p style="text-align:center;">NkBh © 2019</p>
+</body></html>
